src/components/Footer/Footer.scss
@import "mixins";
@import "functions";

.footer {
  width: 100%;
  flex: 0 0 auto;
}

.footer__inner {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-content: center;
  padding: 0.4em 0;
  border-top: 1px solid getColor(concrete);

  @include break {
    flex-direction: initial;
  }
}

.footer__left,
.footer__right {
  flex: 0 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  max-width: 100%;
  margin: auto;
  align-items: center;
  padding: 0.25em 0;

  @include break {
    margin: 0;
    padding: 0;
  }
}

.footer__left {
  @include break {
    padding-left: 1.5em;
  }
}

.footer__right {
  @include break {
    padding-right: 1.5em;
  }
}

.footer__middle {
  display: none;

  @include break {
    flex: 0 0 auto;
    display: block;
  }
}

.footer__icon {
  display: inline-block;
  height: 35px;

  img {
    width: auto;
    height: 100%;
  }
}

.footer__link {
  font-size: getFontSize(-2);
  text-transform: uppercase;
  color: getColor(dusty-grey);
  @include fontantialias(false);

  &:not(:last-child) {
    margin-right: 1.5em;
  }

  &:hover {
    color: getColor(mine-shaft);
  }
}

.footer__license {
  display: inline-block;
  height: 25px;

  img {
    width: auto;
    height: 100%;
    margin-left: 1px;
  }
}

.footer__top {
  max-width: 900px;
  margin: 0 auto;
  text-align: center;
  padding: 40px 20px 30px 20px;
}
.footer__openjs {
  display: flex;
  justify-content: center;
  margin-bottom: 24px;
}

.footer__top p {
  margin: 0 auto;
  line-height: 1.6;
  color: getColor(mine-shaft);
  font-size: getFontSize(-1);
}

.footer__top p + p {
  margin-top: 18px;
}

